JDK8中使用的GC算法不是引用计数器算法